# otel-partial-python

./: CLAUDE.md  Dockerfile  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/partial_span_processor/: __init__.py
tests/partial_span_processor/: in_memory_log_exporter.py  simple_log_record_processor.py  test_export.py  test_log_record_deprecation.py  test_log_record_no_deprecation_warnings.py  test_partial_span_processor.py
