[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "partial_span_processor"
version = "0.0.10"
authors = [
    { name = "Mladjan Gadzic", email = "gadzic.mladjan@gmail.com" }
]
description = "OTEL Python SDK extension supporting partial spans"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "Apache-2.0" }
dependencies = [
    "opentelemetry-api>=1.39.0",
    "opentelemetry-exporter-otlp>=1.39.0",
    "opentelemetry-exporter-otlp-proto-common>=1.39.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-proto>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-semantic-conventions>=0.60b0"
]

[project.urls]
Homepage = "https://github.com/G-Research/otel-partial-python"

[tool.setuptools]
packages = ["partial_span_processor"]
package-dir = { "" = "src" }
license-files = ["LICEN[CS]E*"]
